--- a/port/css/prism.css
+++ b/port/css/prism.css
@@ -10,7 +10,6 @@ code[class*="language-"],
 pre[class*="language-"] {
 	color: #f8f8f2;
 	background: none;
-	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
 	/* font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace; */
 	font-family: Cascadia, "SF Pro Display";
 	font-size: 16px;
@@ -51,72 +50,67 @@ pre[class*="language-"] {
 	white-space: normal;
 }
 
+/* Monokai */
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-	color: #999;
+	color: #8292a2;
 }
 
 .token.punctuation {
-	color: #ccc;
+	color: #f8f8f2;
 }
 
-.token.tag,
-.token.attr-name,
-.token.namespace,
-.token.deleted {
-	color: #e2777a;
-}
-.token.function-name {
-	color: #6196cc;
-}
-
-.token.boolean,
-.token.number,
-.token.function {
-	color: #f08d49;
+.token.namespace {
+	opacity: .7;
 }
 
 .token.property,
-.token.class-name,
+.token.tag,
 .token.constant,
-.token.symbol {
-	color: #f8c555;
+.token.symbol,
+.token.deleted {
+	color: #f92672;
 }
-.owl .token.property,
-.owl .token.class-name,
-.owl .token.constant,
-.owl .token.symbol {
-	color: #80CAC3;
+
+.token.boolean,
+.token.number {
+	color: #ae81ff;
 }
 
 .token.selector,
-.token.important,
-.token.atrule,
-.token.keyword,
-.token.builtin {
-	color: #cc99cd;
-}
-.owl .token.selector,
-.owl .token.important,
-.owl .token.atrule,
-.owl .token.keyword,
-.owl .token.builtin {
-	color: #ADDB67;
-}
+.token.attr-name,
 .token.string,
 .token.char,
-.token.attr-value,
-.token.regex,
-.token.variable {
-	color: #7ec699;
+.token.builtin,
+.token.inserted {
+	color: #a6e22e;
 }
 
 .token.operator,
 .token.entity,
-.token.url {
-	color: #67cdcc;
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable {
+	color: #f8f8f2;
+}
+
+.token.atrule,
+.token.attr-value,
+.token.function,
+.token.class-name {
+	color: #e6db74;
+}
+
+.token.keyword {
+	color: #66d9ef;
+}
+
+.token.regex,
+.token.important {
+	color: #fd971f;
 }
 
 .token.important,
@@ -130,9 +124,135 @@ pre[class*="language-"] {
 .token.entity {
 	cursor: help;
 }
-.token.inserted {
-	color: green;
+
+/* Owl */
+.owl .token.comment,
+.owl .token.prolog,
+.owl .token.doctype,
+.owl .token.cdata {
+	color: hsl(0, 0%, 47%); /* #777777 */
 }
+
+.owl .token.punctuation {
+	opacity: .7;
+}
+
+.owl .token.namespace {
+	opacity: .7;
+}
+
+.owl .token.tag,
+.owl .token.boolean,
+.owl .token.number,
+.owl .token.deleted {
+	color: hsl(14, 58%, 55%); /* #CF6A4C */
+}
+
+.owl .token.keyword,
+.owl .token.property,
+.owl .token.selector,
+.owl .token.constant,
+.owl .token.symbol,
+.owl .token.builtin {
+	color: hsl(53, 89%, 79%); /* #F9EE98 */
+}
+
+.owl .token.attr-name,
+.owl .token.attr-value,
+.owl .token.string,
+.owl .token.char,
+.owl .token.operator,
+.owl .token.entity,
+.owl .token.url,
+.owl .language-css .token.string,
+.owl .style .token.string,
+.owl .token.variable,
+.owl .token.inserted {
+	color: hsl(76, 21%, 52%); /* #8F9D6A */
+}
+
+.owl .token.atrule {
+	color: hsl(218, 22%, 55%); /* #7587A6 */
+}
+
+.owl .token.regex,
+.owl .token.important {
+	color: hsl(42, 75%, 65%); /* #E9C062 */
+}
+
+/* Owl Light */
+.owlLight code[class*="language-"],
+.owlLight pre[class*="language-"] {
+	color: #ff8303;
+}
+
+.owlLight .token.comment,
+.owlLight .token.prolog,
+.owlLight .token.doctype,
+.owlLight .token.cdata {
+	color: slategray;
+}
+
+.owlLight .token.punctuation {
+	color: #999;
+}
+
+.owlLight .token.namespace {
+	opacity: .7;
+}
+
+.owlLight .token.property,
+.owlLight .token.tag,
+.owlLight .token.boolean,
+.owlLight .token.number,
+.owlLight .token.constant,
+.owlLight .token.symbol,
+.owlLight .token.deleted {
+	color: #905;
+}
+
+.owlLight .token.selector,
+.owlLight .token.attr-name,
+.owlLight .token.string,
+.owlLight .token.char,
+.owlLight .token.builtin,
+.owlLight .token.inserted {
+	color: #690;
+}
+
+.owlLight .token.operator,
+.owlLight .token.entity,
+.owlLight .token.url,
+.owlLight .language-css .token.string,
+.owlLight .style .token.string {
+	color: #9a6e3a;
+	/* This background color was intended by the author of this theme. */
+	background: hsla(0, 0%, 100%, .5);
+}
+
+.owlLight .token.atrule,
+.owlLight .token.attr-value,
+.owlLight .token.keyword {
+	color: #07a;
+}
+
+.owlLight .token.function,
+.owlLight .token.class-name {
+	color: #DD4A68;
+}
+
+.owlLight .token.regex,
+.owlLight .token.important,
+.owlLight .token.variable {
+	color: #e90;
+}
+
+
+
+
+
+
+
 
 pre[class*="language-"].line-numbers {
 	position: relative;
@@ -185,23 +305,38 @@ pre[class*="language-"].line-numbers > code {
 }
 .code-content::-webkit-scrollbar-thumb {
 	border-radius: 8px;
-	background-color: black;
+	background-color: rgb(19, 17, 17);
 }
 .code-content::-webkit-scrollbar-corner {
 	background-color: #282C34;
 }
 
-.code-content2::-webkit-scrollbar {
-	width: 10px;  /* 세로축 스크롤바 길이 */
-	height: 10px; /* 가로축 스크롤바 길이 */
+.editor.owl .code-content::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
 }
-.code-content2::-webkit-scrollbar-track-piece {
-	background-color: #282C34;
+.editor.owl .code-content::-webkit-scrollbar-track-piece {
+	background: #011627;
 }
-.code-content2::-webkit-scrollbar-thumb {
+.editor.owl .code-content::-webkit-scrollbar-thumb {
 	border-radius: 8px;
-	background-color: black;
+	background: #002848;
 }
-.code-content2::-webkit-scrollbar-corner {
-	background-color: #282C34;
+.editor.owl .code-content::-webkit-scrollbar-corner {
+	background: #011627;
+}
+
+.editor.owlLight .code-content::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+}
+.editor.owlLight .code-content::-webkit-scrollbar-track-piece {
+	background: #fbfbfb;
+}
+.editor.owlLight .code-content::-webkit-scrollbar-thumb {
+	border-radius: 8px;
+	background: #bdb8b8;
+}
+.editor.owlLight .code-content::-webkit-scrollbar-corner {
+	background: #fbfbfb;
 }
