--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -244,23 +244,72 @@ h2.ftitle {
     display: flex;
     justify-content: space-between;
     width: 27.083vw;
+    border: 1px solid #000;
 
 }
 .btn-wrap a {
+    position: relative;
     font-family: 'Ilisarniq-Regular';
     display: block;
-    width: 12.813vw;
+    /* width: 12.813vw; */
+    width: 50%;
     height: 48px;
-    box-sizing: border-box;
-    background: #000;
     text-align: center;
     line-height: 46px;
-    color: #fff;
     font-size: 0.938vw;
     text-transform: uppercase;
 }
+.btn-wrap a.leftBtn {
+    color: #fff;
+    transition: color 0.5s ease-in-out;
+}
+.btn-wrap a.leftBtn.movebg {
+    color: #000;
+}
+.btn-wrap a.leftBtn::before {
+    content: '';
+    width: 100%; height: 100%;
+    position: absolute; 
+    top: 0; left: 0;
+    z-index: -1;
+    background: #000;
+    transition: left 0.5s ease-in-out;
+}
+.btn-wrap a.leftBtn.movebg::before {
+    left: 100%;
+}
+.btn-wrap a.rightBtn {
+    color: #000;
+    transition: color 0.5s ease-in-out;
+}
+.btn-wrap a.rightBtn.movebg {
+    color: #fff;
+}
+.btn-wrap a span {
+    display: inline-block;
+    transition: transform 0.3s ease-in-out;
+}
+.btn-wrap a:hover span {
+    transform: scale(1.2);
+}
+
 .container.codecontainer {
+    opacity: 0;
     padding-top: 300px;
+}
+.container.codecontainer.opacity1 {
+    animation: opacity1 1s ease-in-out forwards;
+}
+@keyframes opacity1 {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+.container.codecontainer.opacity0 {
+    animation: opacity0 0.3s ease-in-out forwards;
+}
+@keyframes opacity0 {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
 }
 .code-align-box {
     display: flex;
