--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -37,11 +37,6 @@ html, body {
 }
 
 /* cursor */
-/* .cursor-wrap {
-    position: absolute; top: 0; left: 0;
-    width: 100%; height: 100vh;
-    overflow: hidden;
-} */
 .cursor {
     position: absolute;
     /* width: 3000px; height: 3000px; */
@@ -160,7 +155,8 @@ h1.main-tit .split span {
     100% {top: -9vw; left: 15.604vw; opacity: 0;}
 }
 h2.ftitle {
-    z-index: 10;
+    /* z-index: 10; */
+    z-index: 1;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px #fff;
     -moz-text-fill-color: transparent;
@@ -431,7 +427,7 @@ h2.ftitle {
     border-top-left-radius: 5px; 
     border-top-right-radius: 5px;
     display: flex;
-    font-size: 20px;
+    font-size: 16px;
 }
 .editor .editor-tab .dot {
     padding: 14px 55px 14px 14px;
@@ -467,7 +463,7 @@ h2.ftitle {
     display: inline-block;
     background: #21252B; 
     color: #8E9093; 
-    padding: 6px 32px;
+    padding: 8px 32px;
     box-sizing: border-box;
 }
 .editor .editor-tab .menu li a.active {
@@ -775,16 +771,55 @@ h2.ftitle {
     }
 
     /* secttion1 */
+    #section1 {
+        padding-top: 66px;
+    }
+    .left-title {
+        transform: rotate(-90deg);
+        z-index: 2;
+    }
+    h2.ftitle {
+        display: none;
+    }
+    .left-title h2 {
+        top: -16.8vw; left: 64.604vw;
+    }
+    .left-title.titMove h2 {
+        /* animation: titMove1 1s ease-in-out forwards; */
+        animation: titMove1 1s cubic-bezier(0, 3.32, 0,-0.46) forwards;
+    }
+    @keyframes titMove1 {
+        0% {top: 16.25vw; left: 29.604vw; opacity: 0; transform: skew(0deg, -5deg);}
+        100% {top: -8.8vw; left: 23.604vw; opacity: 1; transform: skew(0deg, 0deg);}
+    }
+    .left-title.titFadeOut h2 {
+        animation: titFadeOut1 .5s ease-in-out forwards;
+    }
+    @keyframes titFadeOut1 {
+        0% {top: -8.8vw; left: 23.604vw; opacity: 1;}
+        100% {top: -8.8vw; left: 23.604vw; opacity: 0;}
+    }
+    .img-align-box {
+        position: relative;
+        z-index: 1;
+    }
     .img-wrap {
         width: 77vw;
+        /* height: 70vh; */
         height: 51vh;
     }
     .sec1-img {
         left: 0 !important;
         transform: scale3d(1,1,1) !important;
     }
-    h2.ftitle {
-        -webkit-text-fill-color: transparent;
-        -webkit-text-stroke: 1px #fff;
+    
+    
+    .left-num-wrap {
+        top: -30vw !important;
+        left: 48vw;
+        transform: rotate(0deg);
+    }
+    .left-num-wrap .left-num {
+        font-size: 30.625vw;
     }
 }
