--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -126,49 +126,21 @@ h1.main-tit .split span {
 .sec1 {
     position: relative;
 }
-.left-title {
-    position: relative;
-    left: 0px;
-}
 .left-title h2 {
-    position: absolute; top: 7.25vw; left: 13.604vw;
-    opacity: 0;
+    position: absolute; top: -9.25vw; left: 1.604vw;
     font-size: 9.986vw;
     font-family: 'Ilisarniq-Black';
-    color: #fff;
     text-transform: uppercase;
     letter-spacing: 0.2vw;
-    transition: all 1s;
-    
-}
-.left-title.titMove h2 {
-    /* animation: titMove1 1s cubic-bezier(0,-0.32, 0.47, 1.57) forwards; */
-    /* animation: titMove1 1s cubic-bezier(0, 3.32, 0,-0.46) forwards; */
-    animation: titMove1 1s ease-in-out forwards;
-    transition: all 1s ease-in-out;
-}
-@keyframes titMove1 {
-    0% {top: 7.25vw; left: 13.604vw; opacity: 0; transform: skew(0deg, -5deg);}
-    100% {top: -9vw; left: 4.604vw; opacity: 1; transform: skew(0deg, 0deg);}
-}
-.left-title.titFadeOut h2 {
-    animation: titFadeOut1 .5s ease-in-out forwards;
-}
-@keyframes titFadeOut1 {
-    0% {top: -9vw; left: 4.604vw; opacity: 1;}
-    100% {top: -9vw; left: 4.604vw; opacity: 0;}
 }
 h2.ftitle {
-    /* z-index: 10; */
-    z-index: 1;
-    -webkit-text-fill-color: transparent;
+    
     -webkit-text-stroke: 2px #fff;
-    -moz-text-fill-color: transparent;
-    -moz-text-stroke: 2px #fff;
-    -ms-text-fill-color: transparent;
-    -ms-text-stroke: 2px #fff;
-    -o-text-fill-color: 2px #fff;
-    -o-text-stroke: 2px #fff;
+    -webkit-text-fill-color: transparent;
+}
+h2.btitle {
+    color: #fff;
+    z-index: -1;
 }
 /* .img-align-box {
     display: flex;
@@ -179,17 +151,9 @@ h2.ftitle {
     height: 38.542vw;
     /* position: absolute; top: 9.531vw; left: 0; */
     overflow: hidden;
-    background: rgb(115, 182, 169);
     transition: all 1s;
 }
-.sec1-img::before {
-    position: absolute; left: 0; top: 0;
-    content: '';
-    width: 100%; height: 100%;
-    background: rgba(13, 147, 120, 0.5);
-    z-index: 1;
-}
-.sec1-img {
+.img {
     background: url(../img/webstandard_silver_gray.jpg) no-repeat center center;
     background-size: cover;
     width: 100%; height: 100%;
